--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 <body>
 
   <!-- Header -->
-  <div id="container2">
+  <div>
     <a href="index.html">
       <img src="DDOTT_logo.jpg" alt="D-DOTT logo" style="width: 13%; object-fit: contain; float: left;">
     </a>
