--- a/over_het_onderzoek.html
+++ b/over_het_onderzoek.html
@@ -82,9 +82,9 @@
 <body>
 
   <!-- Header -->
-  <div id="container1">
+  <div>
     <a href="index.html">
-      <img src="DDOTT_logo.jpg" alt="D-DOTT logo" style="width: 7%; object-fit: contain; float: left;">
+      <img src="DDOTT_logo.jpg" alt="D-DOTT logo" style="width: 13%; object-fit: contain; float: left;">
     </a>
   </div>
 
