--- a/onderzoekers-nijmegen.html
+++ b/onderzoekers-nijmegen.html
@@ -124,7 +124,9 @@
             <h2>Dr. Philip van Eijndhoven</h2>
             <p><em>Psychiater</em></p>
             <div class="column2">
-                <p>Philip van Eijndhoven is psychiater en onderzoeker op de afdeling psychiatrie van het Radboudumc. Hij doet onderzoek naar de effecten van neuromodulatie bij patiënten met stemmingsstoornissen. Daarnaast leidt hij arts-assistenten op tot psychiater.&nbsp; </p>
+                <p>Philip van Eijndhoven is psychiater en onderzoeker op de afdeling psychiatrie van het Radboudumc. 
+			Hij doet onderzoek naar de effecten van neuromodulatie bij patiënten met stemmingsstoornissen. 
+			Daarnaast leidt hij arts-assistenten op tot psychiater.&nbsp; </p>
             </div>
             <div class="column3">
                 <a>
@@ -137,11 +139,13 @@
             <h2>Drs. Tom Biemans</h2>
             <p><em>Psycholoog en promovendus op de afdeling Psychiatrie van Radboudumc</em></p>
             <div class="column2">
-                <p>Philip van Eijndhoven is psychiater en onderzoeker op de afdeling psychiatrie van het Radboudumc. Hij doet onderzoek naar de effecten van neuromodulatie bij patiënten met stemmingsstoornissen. Daarnaast leidt hij arts-assistenten op tot psychiater.&nbsp; </p>
+                <p>Tom Biemans is psycholoog en promovendus bij het Radboudumc. 
+			Als uitvoerend onderzoeker van deze innovatieve studie hoopt hij zijn steentje bij te kunnen dragen aan de mentale gezondheid van patiënten die niet/onvoldoende reageren op standaard behandelopties (psychotherapie of medicatie). 
+			Daarnaast is hij in zijn onderzoek geïnteresseerd of er bepaalde symptoom profielen van depressie zijn die beter dan wel slechter reageren op verschillende niet-invasieve hersenstimulatie behandelingen.&nbsp; </p>
             </div>
             <div class="column3">
                 <a>
-                    <img src="images/Tom Biemans.jpg" alt="Dr. Philip van Eijndhoven" class="img-responsive" style="height: 150px;">
+                    <img src="images/Tom Biemans.jpg" alt="Drs. Tom Biemans" class="img-responsive" style="height: 150px;">
                 </a>
             </div>
         </div>
