--- a/onderzoekers-amsterdam.html
+++ b/onderzoekers-amsterdam.html
@@ -118,6 +118,19 @@
         <p>Hieronder vindt u een overzicht van de belangrijkste onderzoekers binnen ons team, samen met hun specialisaties en contactinformatie.</p>
     </section>
 
+	<div class="team-member">
+            <h2>Prof. dr. Eric van Exel</h2>
+            <p><em>Psychiater en Hoogleraar Neuropsychiatrie</em></p>
+            <div class="column2">
+                <p>Eric van Exel richt zich op ouderenpsychiatrie, cognitieve achteruitgang en innovatieve behandelmethoden zoals ECT en TMS. Hij wil de kwaliteit van leven verbeteren door betere herkenning en behandeling van depressie en dementie.</p>
+            </div>
+            <div class="column3">
+                <a href="https://www.linkedin.com/in/eric-van-exel-a77502115/">
+                    <img src="images/Eric van Exel_2.jpg" alt="Prof. Eric van Exel" class="img-responsive" style="height: 150px;">
+                </a>
+            </div>
+        </div>
+	
     <!-- Team Members -->
     <section class="container">
         <div class="team-member">
@@ -129,19 +142,6 @@
             <div class="column3">
                 <a href="https://www.linkedin.com/in/odile-a-van-den-heuvel-b448b223/">
                     <img src="images/Odile van den Heuvel.jpg" alt="Prof. Odile van den Heuvel" class="img-responsive" style="height: 150px;">
-                </a>
-            </div>
-        </div>
-
-        <div class="team-member">
-            <h2>Prof. dr. Eric van Exel</h2>
-            <p><em>Psychiater en Hoogleraar Neuropsychiatrie</em></p>
-            <div class="column2">
-                <p>Eric van Exel richt zich op ouderenpsychiatrie, cognitieve achteruitgang en innovatieve behandelmethoden zoals ECT en TMS. Hij wil de kwaliteit van leven verbeteren door betere herkenning en behandeling van depressie en dementie.</p>
-            </div>
-            <div class="column3">
-                <a href="https://www.linkedin.com/in/eric-van-exel-a77502115/">
-                    <img src="images/Eric van Exel_2.jpg" alt="Prof. Eric van Exel" class="img-responsive" style="height: 150px;">
                 </a>
             </div>
         </div>
@@ -164,7 +164,7 @@
             <h2>Dr. Chris Vriend</h2>
             <p><em>Neurowetenschapper</em></p>
             <div class="column2">
-                <p>Als voorzitter van de imaging werkgroep van D-DOTT speel ik een coördinerende rol in het maken, analyseren en interpreteren van de hersenscans om deze te gebruiken om de magnetische stimulatie optimaal te kunnen richten op de hersenen. &nbsp; </p>
+                <p>Als voorzitter van de imaging werkgroep van D-DOTT speelt Chris Vriend een coördinerende rol in het maken, analyseren en interpreteren van de hersenscans om deze te gebruiken om de magnetische stimulatie optimaal te kunnen richten op de hersenen. &nbsp; </p>
             </div>
             <div class="column3">
                 <a href="https://www.linkedin.com/in/chris-vriend/">
@@ -175,9 +175,11 @@
 		
 			<div class="team-member">
             <h2>Drs. Coen Coomans</h2>
-            <p><em>Neurowetenschapper</em></p>
+            <p><em>Neurowetenschapper en promovendus op de afdeling Psychiatrie bij Amsterdam UMC</em></p>
             <div class="column2">
-                <p>Promovendus bij de afdeling Psychiatrie en afdeling Anatomie & Neurowetenschappen (team neuropsychiatrie) van Amsterdam UMC. Uitvoerend projectmanager van D-DOTT. </p>
+                <p>Coen Coomans is promovendus bij de afdeling Psychiatrie en afdeling Anatomie & Neurowetenschappen (team neuropsychiatrie) van Amsterdam UMC. 
+			Als uitvoerend onderzoeker van de D-DOTT studie in Amsterdam is hij vaak de contactpersoon voor deelnemers van de studie. 
+			In zijn onderzoek probeert Coen middels MRI scans voorspellers te vinden voor behandeluitkomst in rTMS behandeling. </p>
             </div>
             <div class="column3">
                 <a href="https://www.linkedin.com/in/coen-coomans-b9b577188/?originalSubdomain=nl">
@@ -190,7 +192,7 @@
             <h2>Pam Tolsma</h2>
             <p><em>Stagaire D-DOTT studie</em></p>
             <div class="column2">
-                <p>Mensen helpen is een belangrijke drijfveer voor mij. Ik heb veel klinische ervaring omtrent MRI. Mijn ambitie is om bij te
+                <p>Mensen helpen is een belangrijke drijfveer voor Pam. Ik heb veel klinische ervaring omtrent MRI. Mijn ambitie is om bij te
 dragen aan hersenonderzoek en mezelf te ontwikkelen op het gebied van
 de klinische neuropsychologie <br><br><br><br></p>
             </div>
