--- a/onderzoekers-amsterdam.html
+++ b/onderzoekers-amsterdam.html
@@ -178,8 +178,8 @@
             <h2>Drs. Coen Coomans</h2>
             <p><em>Neurowetenschapper en promovendus op de afdeling Psychiatrie bij Amsterdam UMC</em></p>
             <div class="column2">
-                <p>Coen Coomans is promovendus bij de afdeling Psychiatrie en afdeling Anatomie & Neurowetenschappen (team neuropsychiatrie) van Amsterdam UMC. 
-			Als uitvoerend onderzoeker van de D-DOTT studie in Amsterdam is hij vaak de contactpersoon voor deelnemers van de studie. 
+                <p>Coen Coomans is promovendus bij de afdeling Psychiatrie van Amsterdam UMC. 
+			Als uitvoerend onderzoeker van de D-DOTT studie is hij vaak de contactpersoon voor deelnemers. 
 			In zijn onderzoek probeert Coen middels MRI scans voorspellers te vinden voor behandeluitkomst in rTMS behandeling. </p>
             </div>
             <div class="column3">
