--- a/onderzoekers-amsterdam.html
+++ b/onderzoekers-amsterdam.html
@@ -148,6 +148,20 @@
         </div>
 
         <!-- Repeat similar structure for other team members -->
+<div class="team-member">
+            <h2>dr. Annemiek Dols</h2>
+            <p><em>Psychiater en senior onderzoeker</em></p>
+            <div class="column2">
+                <p>Annemiek Dols is psychiater en onderzoeker bij UMC Utrecht en Amsterdam UMC. Haar expertise is op het gebied van stemmingsstoornissen en innovatieve behandelingen. 
+			Ze heeft uitgebreide ervaring met neuromodulatie trials en is de hoofdonderzoeker van D-DOTT. </p>
+            </div>
+            <div class="column3">
+                <a href="https://nl.linkedin.com/in/annemiekdols">
+                    <img src="images/ADols.jpg" alt="Dr. Annemiek Dols" class="img-responsive" style="height: 150px;">
+                </a>
+            </div>
+        </div>
+	
         <div class="team-member">
             <h2>Prof. dr. Ysbrand van der Werf</h2>
             <p><em>Neuropsycholoog, Bioloog en Hoogleraar Functionele Neuroanatomie</em></p>
