--- a/onderzoekers-amsterdam.html
+++ b/onderzoekers-amsterdam.html
@@ -134,7 +134,7 @@
 	
     <!-- Team Members -->
 	<div class="team-member">
-            <h2>dr. Annemiek Dols</h2>
+            <h2>Dr. Annemiek Dols</h2>
             <p><em>Psychiater en senior onderzoeker</em></p>
             <div class="column2">
                 <p>Annemiek Dols is psychiater en onderzoeker bij UMC Utrecht en Amsterdam UMC. Haar expertise is op het gebied van stemmingsstoornissen en innovatieve behandelingen. 
