--- a/onderzoekers-nijmegen.html
+++ b/onderzoekers-nijmegen.html
@@ -140,8 +140,8 @@
             <p><em>Psycholoog en promovendus op de afdeling Psychiatrie van Radboudumc</em></p>
             <div class="column2">
                 <p>Tom Biemans is psycholoog en promovendus bij het Radboudumc. 
-			Als uitvoerend onderzoeker van deze innovatieve studie hoopt hij zijn steentje bij te kunnen dragen aan de mentale gezondheid van patiënten die niet/onvoldoende reageren op standaard behandelopties (psychotherapie of medicatie). 
-			Daarnaast is hij in zijn onderzoek geïnteresseerd of er bepaalde symptoom profielen van depressie zijn die beter dan wel slechter reageren op verschillende niet-invasieve hersenstimulatie behandelingen.&nbsp; </p>
+			Als uitvoerend onderzoeker van deze innovatieve studie hoopt hij bij te dragen aan de mentale gezondheid van patiënten door middel van rTMS. 
+			Daarnaast is hij in zijn onderzoek geïnteresseerd of er bepaalde symptoom profielen van depressie beter of slechter reageren op hersenstimulatie behandelingen.&nbsp; </p>
             </div>
             <div class="column3">
                 <a>
