--- a/onderzoekers-maastricht.html
+++ b/onderzoekers-maastricht.html
@@ -124,7 +124,8 @@
             <h2>Dr. Alexander Sack</h2>
             <p><em>Hoogleraar hersenstimulatie en toegepaste cognitieve neurowetenschappen&nbsp;</em></p>
             <div class="column2">
-                <p>Alexander Sack is hoogleraar hersenstimulatie en toegepaste cognitieve neurowetenschappen aan de faculteit der psychologie en neurowetenschappen van de Universiteit Maastricht. Opgeleid als psycholoog en neurowetenschapper met een doctoraat in de natuurwetenschappen is Sack een van de belangrijkste pioniers op het gebied van hersenstimulatieonderzoek en het combineren van hersenstimulatie (TMS/TCS) met hersenbeeldvormingstechnieken (fMRI, EEG).&nbsp; </p>
+                <p>Alexander Sack is hoogleraar hersenstimulatie en toegepaste cognitieve neurowetenschappen aan de faculteit der psychologie en neurowetenschappen van de Universiteit Maastricht. 
+			Opgeleid als psycholoog en neurowetenschapper met een doctoraat in de natuurwetenschappen is Sack een van de belangrijkste pioniers op het gebied van hersenstimulatieonderzoek.&nbsp; </p>
             </div>
             <div class="column3">
                 <a>
