--- a/onderzoekers-amsterdam.html
+++ b/onderzoekers-amsterdam.html
@@ -127,7 +127,7 @@
             </div>
             <div class="column3">
                 <a href="https://www.linkedin.com/in/eric-van-exel-a77502115/">
-                    <img src="images/Eric van Exel_2.jpg" alt="Prof. Eric van Exel" class="img-responsive" style="height: 150px;">
+                    <img src="images/Eric van Exel.jpg" alt="Prof. Eric van Exel" class="img-responsive" style="height: 150px;">
                 </a>
             </div>
         </div>
