--- a/onderzoekers-amsterdam.html
+++ b/onderzoekers-amsterdam.html
@@ -178,7 +178,7 @@
 		
 		<div class="team-member">
             <h2>Dr. Chris Vriend</h2>
-            <p><em>Neurowetenschapper</em></p>
+            <p><em>Neurowetenschapper en associate professor</em></p>
             <div class="column2">
                 <p>Als voorzitter van de imaging werkgroep van D-DOTT speelt Chris Vriend een coördinerende rol in het maken, analyseren en interpreteren van de hersenscans om deze te gebruiken om de magnetische stimulatie optimaal te kunnen richten op de hersenen. &nbsp; </p>
             </div>
