--- a/patienten.html
+++ b/patienten.html
@@ -21,7 +21,7 @@
       margin: 0;
       display: flex;
       background-color: #f4f4f4;
-      overflow: hidden;
+      overflow: auto;
     }
 
     ul li {
@@ -45,7 +45,7 @@
       margin: 0;
       display: flex;
       background-color: #f4f4f4;
-      overflow: hidden;
+      overflow: auto;
     }
 
     ul2 li {
