--- a/over_het_onderzoek.html
+++ b/over_het_onderzoek.html
@@ -162,8 +162,10 @@ depressie worden opgenomen in de studie.
     <p><strong>Onderzoekslocaties Nederland:</strong></p>
     <ul>
       <li>Amsterdam <br>(GGZ inGeest, Amstelveenseweg 589, 1081 JC Amsterdam)</li>
-      <li>Nijmegen <br>(Radboudumc, Reinier Postlaan 4,6525 GC Nijmegen)</li>
+        <li>Amsterdam <br>(Amsterdam UMC, Meibergdreef 9, 1105 AZ Amsterdam)</li>
       <li>Maastricht <br>(Maastricht UMC+, P. Debyelaan 25, 6229 HX Maastricht)</li>
+        <li>Nijmegen <br>(Radboudumc, Reinier Postlaan 4,6525 GC Nijmegen)</li>
+      
     </ul>
   </div>
 
