--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       margin: 0;
       display: flex;
       background-color: #f4f4f4;
-      overflow: hidden;
+      overflow: auto;
     }
 
     ul li {
@@ -145,9 +145,10 @@
 	
         <p><strong>Onderzoekslocaties Nederland:</strong></p>
     <ul>
-      <li>Amsterdam <br>(GGZ inGeest, Amstelveenseweg 589, 1081 JC Amsterdam)</li>
-      <li>Nijmegen <br>(Radboudumc, Reinier Postlaan 4,6525 GC Nijmegen)</li>
+       <li>Amsterdam <br>(GGZ inGeest, Amstelveenseweg 589, 1081 JC Amsterdam)</li>
+        <li>Amsterdam <br>(Amsterdam UMC, Meibergdreef 9, 1105 AZ Amsterdam)</li>
       <li>Maastricht <br>(Maastricht UMC+, P. Debyelaan 25, 6229 HX Maastricht)</li>
+        <li>Nijmegen <br>(Radboudumc, Reinier Postlaan 4,6525 GC Nijmegen)</li>
     </ul>
 	
 	 <p><strong>Wilt u zich aanmelden of contact opnemen? </strong> Mail dan naar: <br><strong>ddott@amsterdamumc.nl</strong> voor locatie Amsterdam <br><strong>d-dott.psy@radboudumc.nl</strong> voor locatie Nijmegen.
