--- a/contact2.html
+++ b/contact2.html
@@ -21,7 +21,7 @@
       margin: 0;
       display: flex;
       background-color: #f4f4f4;
-      overflow: hidden;
+      overflow: auto;
     }
 
     ul li {
@@ -130,13 +130,16 @@
 	<section class="container">
 		<p><br></p>
 		<h1>Adresgegevens Onderzoekslocaties D-DOTT</h1>
-        <p><strong>• Amsterdam UMC &amp; GGZ inGeest</strong><br>
+        <p><strong>• GGZ inGeest</strong><br>
             (Amstelveenseweg 589, 1081 JC Amsterdam);<br>
-            <a href="https://www.amsterdamumc.nl/" target="_blank">www.amsterdamumc.nl</a><br>
             <a href="https://www.ggzingeest.nl/" target="_blank">www.GGZinGeest.nl</a>
         </p>
+	<p><strong>• Amsterdam UMC </strong><br>
+            (Meibergdreef 9, 1105 AZ Amsterdam);<br>
+            <a href="https://www.amsterdamumc.nl/" target="_blank">www.amsterdamumc.nl</a><br>
+        </p>
 
-        <p><strong>• Radboudumc, Nijmegen)</strong><br>
+        <p><strong>• Radboudumc</strong><br>
             (Reinier Postlaan 4,6525 GC Nijmegen);<br>
             <a href="/https://www.radboudumc.nl/afdelingen/psychiatrie" target="_blank">www.radboudumc.nl</a>
         </p>
