--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
     <!-- Footer -->
     <div class="footer">
         Onder financiering van: 
-        <a href="https://zorginstituutnederland.nl/">
+        <a href="https://www.zonmw.nl/nl">
             <img src="images/zonmw.jpg" alt="ZonMw doelmatigheidsonderzoek" class="img-responsive">
         </a>
     </div>
