--- a/onderzoekers-amsterdam.html
+++ b/onderzoekers-amsterdam.html
@@ -21,7 +21,7 @@
       margin: 0;
       display: flex;
       background-color: #f4f4f4;
-      overflow: hidden;
+      overflow: auto;
     }
 
     ul li {
