--- a/onderzoekers-amsterdam.html
+++ b/onderzoekers-amsterdam.html
@@ -191,7 +191,7 @@
 		
 			<div class="team-member">
             <h2>Drs. Coen Coomans</h2>
-            <p><em>Neurowetenschapper en promovendus op de afdeling Psychiatrie bij Amsterdam UMC</em></p>
+            <p><em>Neurowetenschapper en promovendus</em></p>
             <div class="column2">
                 <p>Coen Coomans is promovendus bij de afdeling Psychiatrie van Amsterdam UMC. 
 			Als uitvoerend onderzoeker van de D-DOTT studie is hij vaak de contactpersoon voor deelnemers. 
