--- a/onderzoekers-overig.html
+++ b/onderzoekers-overig.html
@@ -129,7 +129,7 @@
                   Sluit je aan, en zorg voor meer openheid, meer contact en meer onderzoek.
             </div>
             <div class="column3">
-                <a>
+                <a href="https://www.linkedin.com/in/ysbrand-van-der-werf-009160/">
                     <img src="images/Depressie Vereniging.jpg" alt="De depressievereniging" class="img-responsive" style="height: 150px;">
                 </a>
             </div>
