--- a/onderzoekers-amsterdam.html
+++ b/onderzoekers-amsterdam.html
@@ -2,8 +2,8 @@
 <html lang="nl">
 <head>
 <meta charset="utf-8">
-<meta name="description" content="Privacyverklaring van D-DOTT. Bescherming van persoonlijke gegevens en vertrouwelijke behandeling van verstrekte informatie.">
-<meta name="keywords" content="Privacy, D-DOTT, Gegevensbescherming, Vertrouwelijkheid, Amsterdam UMC, Radboudumc, Maastricht">
+<meta name="description" content="D-DOTT studie - Onderzoekers Amsterdam">
+<meta name="keywords" content="D-DOTT, GGZ inGeest, Amsterdam UMC, Radboudumc, Maastricht">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>D-DOTT - Privacyverklaring</title>
@@ -121,7 +121,7 @@
 <section class="container">
 	<div class="team-member">
             <h2>Prof. dr. Eric van Exel</h2>
-            <p><em>Psychiater en Hoogleraar Neuropsychiatrie</em></p>
+            <p><em>Psychiater en Hoogleraar Ouderenpsychiatrie</em></p>
             <div class="column2">
                 <p>Eric van Exel richt zich op ouderenpsychiatrie, cognitieve achteruitgang en innovatieve behandelmethoden zoals ECT en TMS. Hij wil de kwaliteit van leven verbeteren door betere herkenning en behandeling van depressie en dementie.</p>
             </div>
