--- a/onderzoekers-amsterdam.html
+++ b/onderzoekers-amsterdam.html
@@ -154,7 +154,7 @@
             <h2>Prof. dr. Odile van den Heuvel</h2>
             <p><em>Psychiater en Hoogleraar Neuropsychiatrie</em></p>
             <div class="column2">
-                <p>Odile van den Heuvel is psychiater en hoogleraar Neuropsychiatrie bij Amsterdam UMC - VUmc. Haar expertise ligt op het grensvlak van psychiatrie, neurologie en neurowetenschappen. Ze heeft uitgebreide ervaring met hersenscanonderzoek en klinische trials.</p>
+                <p>Odile van den Heuvel is psychiater en hoogleraar Neuropsychiatrie bij Amsterdam UMC - Vrije Universiteit. Haar expertise ligt op het grensvlak van psychiatrie, neurologie en neurowetenschappen. Ze heeft uitgebreide ervaring met hersenscanonderzoek en klinische trials, waaronder rTMS trials.</p>
             </div>
             <div class="column3">
                 <a href="https://www.linkedin.com/in/odile-a-van-den-heuvel-b448b223/">
