--- a/onderzoekers-amsterdam.html
+++ b/onderzoekers-amsterdam.html
@@ -58,6 +58,17 @@
       margin: 10px 0;
     }
 
+	container {
+            display: flex;
+            flex-direction: column; /* Stack elements vertically */
+            gap: 20px; /* Add space between elements */
+        }
+
+        .container div {
+            display: block;
+
+	}
+
     .container1 {
       text-align: center;
     }
