--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
        <li>Amsterdam <br>(GGZ inGeest, Amstelveenseweg 589, 1081 JC Amsterdam)</li>
         <li>Amsterdam <br>(Amsterdam UMC, Meibergdreef 9, 1105 AZ Amsterdam)</li>
       <li>Maastricht <br>(Maastricht UMC+, P. Debyelaan 25, 6229 HX Maastricht)</li>
-        <li>Nijmegen <br>(Radboudumc, Reinier Postlaan 4,6525 GC Nijmegen)</li>
+        <li>Nijmegen <br>(Radboudumc, Reinier Postlaan 4, 6525 GC Nijmegen, Psychiatrie polikliniek, route nummer 961)</li>
     </ul>
 	
 	 <p><strong>Wilt u zich aanmelden of contact opnemen? </strong> Mail dan naar: <br><strong>ddott@amsterdamumc.nl</strong> voor locatie Amsterdam <br><strong>d-dott.psy@radboudumc.nl</strong> voor locatie Nijmegen.
