--- a/onderzoekers-amsterdam.html
+++ b/onderzoekers-amsterdam.html
@@ -58,7 +58,7 @@
       margin: 10px 0;
     }
 
-	container {
+	.container {
             display: flex;
             flex-direction: column; /* Stack elements vertically */
             gap: 20px; /* Add space between elements */
